--- a/css/modal.css
+++ b/css/modal.css
@@ -133,7 +133,9 @@
 .contenidoModal .subContenido .historial .bloque .hora {
   font-size: 11px;
 }
-.contenidoModal .subContenido .historial .bloque .fecha, .contenidoModal .subContenido .historial .bloque .hora, .contenidoModal .subContenido .historial .bloque .titulo {
+.contenidoModal .subContenido .historial .bloque .fecha,
+.contenidoModal .subContenido .historial .bloque .hora,
+.contenidoModal .subContenido .historial .bloque .titulo {
   text-align: center;
   padding: 2px 0px;
 }
@@ -141,7 +143,8 @@
   display: grid;
   grid-template-columns: 1fr;
 }
-.contenidoModal .subContenido input, .contenidoModal .subContenido select {
+.contenidoModal .subContenido input,
+.contenidoModal .subContenido select {
   margin: 5px 0px;
   border-radius: 8px;
   border: 2px solid #a8a8b1;
@@ -149,7 +152,8 @@
   font-size: 15px;
   font-family: "Inter";
 }
-.contenidoModal .subContenido input.active, .contenidoModal .subContenido select.active {
+.contenidoModal .subContenido input.active,
+.contenidoModal .subContenido select.active {
   border: 2px solid rgb(139, 0, 0);
   background-color: rgb(235, 211, 211);
 }
@@ -202,6 +206,44 @@
   background-color: rgb(0, 146, 19);
 }
 .contenidoModal .contenidoFinal input[type=submit]:hover {
+  color: white;
+  background-color: rgba(199, 0, 0, 0.753);
+}
+.contenidoModal .contenidoFinal1 {
+  background-color: #F4F4F5;
+  border-top: 1px solid gray;
+  padding: 20px;
+  margin-bottom: 70px;
+  border-bottom-left-radius: 7.5px;
+  border-bottom-right-radius: 7.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contenidoModal .contenidoFinal1 .botones {
+  margin: auto auto;
+  display: block;
+}
+.contenidoModal .contenidoFinal1 .botones input[type=submit] {
+  background-color: transparent;
+  margin: 0px 5px;
+  padding: 10px;
+  border-radius: 15px;
+  font-family: "Inter";
+  font-weight: 700;
+  border: 3px solid rgba(199, 0, 0, 0.753);
+  color: rgba(199, 0, 0, 0.753);
+  font-size: 15px;
+  text-align: center;
+}
+.contenidoModal .contenidoFinal1 .botones input[type=submit].aprobar {
+  border-color: rgb(0, 146, 19);
+  color: rgb(0, 146, 19);
+}
+.contenidoModal .contenidoFinal1 .botones input[type=submit].aprobar:hover {
+  background-color: rgb(0, 146, 19);
+}
+.contenidoModal .contenidoFinal1 .botones input[type=submit]:hover {
   color: white;
   background-color: rgba(199, 0, 0, 0.753);
 }
