--- a/css/modal.scss
+++ b/css/modal.scss
@@ -29,7 +29,7 @@
 }
 
 .tooltip {
-    position:  fixed;
+    position: fixed;
     padding: 20px 5px;
     border: 1px solid #b3c9ce;
     border-radius: 4px;
@@ -38,18 +38,18 @@
     color: #333;
     background: #fff;
     z-index: 0;
-    
+
 }
 
 /* Modal Content */
-.contenidoModal{
+.contenidoModal {
     width: 600px;
     margin: auto auto;
 
 
 
 
-    .logo{
+    .logo {
         background-color: white;
         position: absolute;
         top: 25px;
@@ -60,74 +60,86 @@
         display: flex;
         padding: 10px;
         border: 1px solid $colorBorde;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
         }
 
-}
-.contenidoM {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 40px 30px;
-    border-top: 1px solid #888;
-    border-top-left-radius: 7.5px;
-    border-top-right-radius: 7.5px;
-
-
-
-
-    
     }
-    h2{
+
+    .contenidoM {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 40px 30px;
+        border-top: 1px solid #888;
+        border-top-left-radius: 7.5px;
+        border-top-right-radius: 7.5px;
+
+
+
+
+
+    }
+
+    h2 {
         letter-spacing: 2px;
     }
-    .subtitulo{
+
+    .subtitulo {
         margin-top: 25px;
         padding-top: 10px;
-        h3{
+
+        h3 {
             letter-spacing: 1.5px;
             text-align: center;
             font-weight: 600;
         }
     }
 
-    ul>li{
+    ul>li {
         list-style-type: lower-latin;
         padding: 3.5px;
     }
-    .grid{
+
+    .grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
-    .grid-dual{
+
+    .grid-dual {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
 
 
-        
+
     }
-    .subContenido{
+
+    .subContenido {
         margin: 15px 0px;
         display: block;
-        span{
-          font-weight: 500;  
+
+        span {
+            font-weight: 500;
         }
-        .fondoPerfil{
+
+        .fondoPerfil {
             height: 40px;
             width: 40px;
             border-radius: 25px;
             display: flex;
             align-items: center;
             margin-bottom: 5px;
-            span{
+
+            span {
                 width: 100%;
                 text-align: center;
 
             }
         }
-        .historial{
+
+        .historial {
             background-color: #f3f3f3;
             min-height: 130px;
             display: flex;
@@ -135,26 +147,33 @@
             gap: 15px;
             padding: 10px;
 
-            .bloque{
+            .bloque {
                 border: 1px solid $colorBorde;
-                .titulo{
+
+                .titulo {
                     font-size: 13px;
                     font-weight: 600;
                 }
-                .fecha{
+
+                .fecha {
                     font-size: 12px;
                 }
-                .hora{
+
+                .hora {
                     font-size: 11px;
                 }
-                .fecha,.hora,.titulo{
+
+                .fecha,
+                .hora,
+                .titulo {
                     text-align: center;
                     padding: 2px 0px;
                 }
             }
 
         }
-        div.grid{
+
+        div.grid {
             display: grid;
             grid-template-columns: 1fr;
 
@@ -162,23 +181,25 @@
 
         }
 
-        
-        input, select{
+
+        input,
+        select {
             margin: 5px 0px;
             border-radius: 8px;
             border: 2px solid #a8a8b1;
             padding: 10px 10px;
             font-size: 15px;
             font-family: $fuente;
-            
-            &.active{
+
+            &.active {
                 border: 2px solid rgb(139, 0, 0);
                 background-color: rgb(235, 211, 211);
-            
+
             }
 
         }
-        textarea{
+
+        textarea {
             border-radius: 8px;
             border: 2px solid #a8a8b1;
             padding: 10px 10px;
@@ -189,7 +210,7 @@
 
         }
 
-        button{
+        button {
             background-color: transparent;
             border: 0px;
             font-size: 20px;
@@ -197,14 +218,15 @@
             height: 100%;
             margin: auto auto;
 
-            img{
+            img {
                 width: 100%;
-                height:100%;
+                height: 100%;
             }
         }
 
     }
-    .contenidoFinal{
+
+    .contenidoFinal {
         $colorSeleccinonado: rgba(199, 0, 0, 0.753);
         background-color: $colorFondo;
         border-top: 1px solid gray;
@@ -214,7 +236,7 @@
         border-bottom-left-radius: 7.5px;
         border-bottom-right-radius: 7.5px;
 
-        input[type=submit]{
+        input[type=submit] {
             background-color: transparent;
             padding: 10px;
             border-radius: 15px;
@@ -224,25 +246,81 @@
             border: 3px solid $colorSeleccinonado;
             color: $colorSeleccinonado;
             font-size: 15px;
-            &.aprobar{
+
+            &.aprobar {
                 $colorAprobado: rgb(0, 146, 19);
                 border-color: $colorAprobado;
                 color: $colorAprobado;
-                &:hover{
+
+                &:hover {
                     background-color: $colorAprobado;
                 }
             }
-        &:hover{
-            color: white;
-            background-color: $colorSeleccinonado;
-        }
+
+            &:hover {
+                color: white;
+                background-color: $colorSeleccinonado;
+            }
         }
     }
-    .panelInformacion{
-        .error{
+
+    .contenidoFinal1 {
+        $colorSeleccinonado: rgba(199, 0, 0, 0.753);
+        background-color: $colorFondo;
+        border-top: 1px solid gray;
+        padding: 20px;
+        margin-bottom: 70px;
+        border-bottom-left-radius: 7.5px;
+        border-bottom-right-radius: 7.5px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+
+        .botones {
+            margin: auto auto;
+            display: block;
+
+
+            input[type=submit] {
+
+                background-color: transparent;
+                margin: 0px 5px;
+                padding: 10px;
+                border-radius: 15px;
+                font-family: $fuente;
+                font-weight: 700;
+                border: 3px solid $colorSeleccinonado;
+                color: $colorSeleccinonado;
+                font-size: 15px;
+                text-align: center;
+
+                &.aprobar {
+                    $colorAprobado: rgb(0, 146, 19);
+                    border-color: $colorAprobado;
+                    color: $colorAprobado;
+
+                    &:hover {
+                        background-color: $colorAprobado;
+                    }
+                }
+
+                &:hover {
+                    color: white;
+                    background-color: $colorSeleccinonado;
+                }
+            }
+        }
+    }
+
+    .panelInformacion {
+        .error {
             color: darkred;
         }
-        .exito{
+
+        .exito {
             color: green;
         }
     }
@@ -250,4 +328,3 @@
 
 
 }
-
