--- a/css/style.scss
+++ b/css/style.scss
@@ -16,20 +16,22 @@
 
 
 ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px;
+    //width: 5px;
+    //height: 5px;
+    
+
 }
 
 ::-webkit-scrollbar-button {
-    background: black;
+    //background: rgb(255, 0, 0);
 }
 
 ::-webkit-scrollbar-track-piece {
-    background: white;
+    //background: black;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(141, 0, 0)
+   // background: rgb(141, 0, 0)
 }
 
 /*Estilos BG (Background)*/
@@ -2257,22 +2259,77 @@ div.main.empleados {
 
     .clases {
         display: flex;
-        gap: 50px;
+        gap: 1%;
         flex-wrap: nowrap;
         //background-color: rgb(207, 133, 133);
-        background-color: rgb(223, 159, 159);
+        background-color: rgb(245, 204, 204);
         padding: 2%;
         border-radius: 10px;
         overflow: auto;
+        &.color2{
+            background-color: #ffe5d8;
+            border: 1px solid rgb(224, 224, 224);
+            flex-wrap: wrap;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            
+        }
 
         .bloqueCard {
             background-color: white;
             border-radius: 7.5px;
-            border: 1px solid #F9F9FA;
+            border: 1px solid rgb(185, 185, 185);
             min-width: 375px;
-            width: 400px;
+            width: 200px;
             padding: 10px;
             padding-bottom: 0;
+            margin-bottom: 1%;
+            
+
+
+
+            &.amplio {
+                width: 425px;
+                border: 1px solid rgb(185, 185, 185);
+
+                .bloqueSeccion {
+                    padding-bottom: 2%;
+                    border-bottom: 1px solid rgb(226, 226, 229);
+
+                    .bloqueSubseccion{
+                        background-color: #fdecec;
+                        padding: 2%;
+                        max-height: 150px;
+                        min-height: 150px;
+                        overflow-y: auto;
+                        border-radius: 20px;
+
+                        a{
+                            background-color: darkred;
+                            color: white;
+                            text-decoration: underline;
+                        }
+
+                    }
+
+                    .tituloSeccion {
+                        text-align: center;
+                        text-transform: uppercase;
+                        font-weight: 500;
+                        font-size: 16.5px;
+                        span{
+                            background-color: rgb(253, 225, 225);
+                            padding: .5%;
+                            text-decoration: underline;
+                        }
+                    }
+                    
+                    
+
+
+                }
+            }
 
             .tituloEmpl {
                 text-align: center;
@@ -2296,6 +2353,11 @@ div.main.empleados {
                 column-gap: 10px;
                 row-gap: 7.5px;
                 padding: 10px 0px;
+
+                &.amplio {
+                    grid-template-columns: 20% 1fr;
+
+                }
 
                 .subtitulo2 {
                     grid-column: 1 / span 2;
@@ -2367,18 +2429,18 @@ div.main.empleados {
                         display: grid;
                         grid-template-columns: 1fr 20px 1fr;
 
-                        div{
+                        div {
                             text-align: center;
 
                             input {
                                 width: 95%;
-                            text-align: center;
+                                text-align: center;
 
 
                             }
                         }
 
-                        
+
                     }
 
                     &.extraInformacion {
