--- a/css/style.css
+++ b/css/style.css
@@ -174,9 +174,30 @@ a {
 }
 
 body {
+  /*Contenido informativo. */
   font-family: "Inter";
   background-color: #F4F4F5;
   display: grid;
+}
+body div.error {
+  padding: 1%;
+  border: 3px solid darkred;
+  border-radius: 5px;
+  background-color: #e4e4e4;
+}
+body div.error span {
+  color: darkred;
+  font-weight: 700;
+}
+body div.exito {
+  padding: 1%;
+  border: 3px solid rgb(0, 139, 19);
+  border-radius: 5px;
+  background-color: #e9f8e9;
+}
+body div.exito span {
+  color: rgb(0, 139, 19);
+  font-weight: 700;
 }
 body.inicio {
   grid-template-columns: 15% 85%;
@@ -507,6 +528,7 @@ div.main.empleados .clases .bloqueCard.amplio .bloqueSeccion .bloqueSubseccion {
   min-height: 150px;
   overflow-y: auto;
   border-radius: 20px;
+  font-size: 15px;
 }
 div.main.empleados .clases .bloqueCard.amplio .bloqueSeccion .bloqueSubseccion a {
   background-color: darkred;
@@ -707,6 +729,7 @@ div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion {
   max-height: 270px;
   overflow-y: auto;
   font-size: 15px;
+  width: 100%;
 }
 div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion {
   background-color: rgb(255, 255, 255);
@@ -715,9 +738,34 @@ div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion
   border-radius: 5px;
   min-height: 200px;
   max-height: 200px;
+  position: relative;
+}
+div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion .botonCopiar {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 1;
+  transition: opacity 0.5s ease;
 }
 div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion:hover {
   background-color: #fffafd;
+}
+div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion:hover .botonCopiar {
+  bottom: 10px;
+  right: 10px;
+  position: absolute;
+  background-color: #0056b3;
+  opacity: 1;
+  bottom: 10px;
+  right: 10px;
 }
 div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion a {
   background-color: darkred;
