--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,11 @@ div.main.empleados .titulo {
   letter-spacing: 2px;
   font-size: large;
 }
+div.main.empleados .titulo select {
+  border: 1px solid gray;
+  border-radius: 7.5px;
+  padding: 0.25%;
+}
 div.main.empleados .bloqueInformacionFinal {
   padding: 10px 2px;
   background-color: rgba(255, 255, 255, 0.185);
@@ -733,32 +738,8 @@ div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion
   max-height: 200px;
   position: relative;
 }
-div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion .botonCopiar {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  padding: 5px 10px;
-  font-size: 14px;
-  border: none;
-  border-radius: 4px;
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-  opacity: 0;
-  z-index: 1;
-  transition: opacity 0.5s ease;
-}
 div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion:hover {
   background-color: #fffafd;
-}
-div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion:hover .botonCopiar {
-  bottom: 10px;
-  right: 10px;
-  position: absolute;
-  background-color: #0056b3;
-  opacity: 1;
-  bottom: 10px;
-  right: 10px;
 }
 div.main.empleados .bloqueCard-Completo .grid-2 .bloqueSeccion .bloqueSubseccion a {
   background-color: darkred;
@@ -967,7 +948,7 @@ div.main.empleados .empleados .bloqueCard .tituloEmpl span {
 }
 div.main.empleados .empleados .bloqueCard .grid-3 {
   display: grid;
-  grid-template-columns: 30% 25% 20%;
+  grid-template-columns: 35% 30% 20%;
   -moz-column-gap: 10px;
        column-gap: 10px;
   row-gap: 7.5px;
@@ -1029,6 +1010,7 @@ div.main.empleados .empleados .bloqueCard .grid-3 .informacion.separador- {
   background-color: rgb(233, 233, 233);
   border-radius: 5px;
   padding: 1px;
+  text-align: center;
 }
 div.main.empleados .empleados .bloqueCard .grid-3 .informacion.separador-:hover {
   background-color: #dfeeff;
