--- a/css/style.css
+++ b/css/style.css
@@ -471,9 +471,11 @@ div.main.empleados .clasesPadre h4 span {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 17px;
-  background-color: rgba(255, 255, 255, 0.623);
-  border: 1px solid white;
-  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.808);
+  border: 3px solid rgb(255, 211, 174);
+  border-radius: 7.5px;
+  border-style: solid;
+  box-shadow: 7.5px 5px 0px 0px rgb(255, 211, 174);
 }
 div.main.empleados .clases {
   display: flex;
