--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,5 @@
-﻿$colorFondo: #F4F4F5;
+﻿$colorFondo: rgb(255, 243, 227);
+$colorFondo1: #F4F4F5;
 $fuente: 'Inter';
 $colorBorde: rgb(226, 226, 226);
 $bgCalendarioMes: #ff355e;
